--- a/static/css.css
+++ b/static/css.css
@@ -16,7 +16,7 @@ header > #title {
 	position: relative;
 	font-family: Constantia,'minijianyingbik78bba942717567';
 }
-header > #title > img {
+.stars {
 	position: absolute;
 	top: 10px;
 	right: 10px;
@@ -58,13 +58,23 @@ section {
 }
 section#home {
 	display: block;
+}
+.left {
+	width: 70%;
+	float: left;
 	text-align: center;
 }
-/* section.on { */
-	/* display: block; */
-	/* line-height: 24px; */
-	/* text-align: center; */
-/* } */
+.right {
+	width: 70%;
+	float: right;
+	text-align: center;
+}
+.xiaosi {
+	float: right;
+}
+.tibo {
+	float: left;
+}
 section > ul {
 	list-style: square;
 	padding-left: 25px;
@@ -89,7 +99,7 @@ aside > * {
 	padding: 0px 1px;
 	color: white;
 	text-decoration: none;
-	font-size: 11px;
+	font-size: 12px;
 	cursor: pointer;
 }
 aside > .on {
