--- a/templates/fr.html
+++ b/templates/fr.html
@@ -14,7 +14,7 @@
 				<h1>Traduction Fr-Cn, Cn-Fr<br/>
 					Cours de français en ligne</h1>
 				</h1>
-				<img src='{{ url_for("static",filename="stars.png") }}'>
+				<img class='stars' src='{{ url_for("static",filename="stars.png") }}'>
 			</div>
 		</header>
 		<nav>
@@ -25,9 +25,10 @@
 		</nav>
 		<main>
 			<section id='home' class='on'>
-				<p>Bienvenue chez 武晓偲 (Léa) et Thibaut Deduit (狄波), professeurs et traducteurs à Shenyang depuis fin 2013.</p>
-				<p>(traductrice et prof depuis fin 2013 ?)</p>
-				<p>Nous sommes à votre service pour vos besoins en traduction et cours de français.</p>
+				<p class='left'><br/>Bienvenue chez 武晓偲 (Léa) et Thibaut Deduit (狄波), professeurs et traducteurs à Shenyang depuis fin 2013.<br/><br/></p>
+				<img class='xiaosi' src='{{ url_for("static",filename="xiaosi.jpg") }}'>
+				<img class='tibo' src='{{ url_for("static",filename="tibo.jpg") }}'>
+				<p class='right'><br/>Nous sommes à votre service pour vos besoins en traduction et cours de français.</p>
 			</section>
 			<section id='translate'>
 				<p>Notre expérience :</p>
