--- a/templates/zh.html
+++ b/templates/zh.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8'>
 		<meta name='' content=''>
 		<title>中法互译——在线法语课程</title>
-		<link rel='stylesheet' href='{{ url_for("static",filename="css.css") }}'>
+		<link rel='stylesheet' href='{{ url_for("static",filename="zh.css") }}'>
 		<link href='//cdn.webfont.youziku.com/webfonts/nomal/95591/19493/584b68c7f629d8126c7be394.css' rel='stylesheet' type='text/css'/>
 		<script src='https://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js'></script>
 		<script src='{{ url_for("static",filename="js.js") }}'></script>
@@ -26,7 +26,7 @@
 		</nav>
 		<main>
 			<section id='home' class='on'>
-				<p class='left'><br/>...<br/><br/></p>
+				<p class='left'><br/>我们是武晓偲（Léa）和 Thibaut Deduit（狄波），2013年起在沈阳工作生活的跨国组合。<br/><br/></p>
 				<img class='xiaosi' src='{{ url_for("static",filename="xiaosi.jpg") }}'>
 				<img class='tibo' src='{{ url_for("static",filename="tibo.jpg") }}'>
 				<p class='right'><br/>我们将针对需求在翻译和法语课程方面竭诚为您服务。</p>
