--- a/static/fr.css
+++ b/static/fr.css
@@ -1,8 +1,8 @@
 @import url('css.css');
 
 * {
-	font-family: Tahoma;
+	font-family: Tahoma, Arial;
 }
 #title {
-	font-family: Palatino;
+	font-family: Palatino, Arial;
 }
