--- a/templates/fr.html
+++ b/templates/fr.html
@@ -49,10 +49,10 @@
 					<ul>
 						<li>Professeur de français en écoles de langues et en agences</li>
 						<ul>
-							<li class='small'>12/2013-10/2014 à 冠亚法语 : classes de 1 à 3 élèves, niveaux CECR A1-B1, cours classiques et pratique de l'oral</li>
-							<li class='small'>12/2013-10/2014 à 沈阳体育学院 : 2 classes d'une vingtaine d'élèves chacune, A1-B1, cours d'oral en préparation d'un programme d'échange</li>
-							<li class='small'>05/2014-07/2015 à 金矢留学 : classes de 1 à 8 élèves, A1-B1, cours classiques, cours d'oral, préparation d'examens et d'entretiens de visa</li>
-							<li class='small'>08/2015-10/2016 à 弗朗斯法语 : classes de 1 à 9 élèves, A1-C1, cours classiques, cours d'oral, préparation d'entretiens</li>
+							<li class='small'>Décembre 2013 - octobre 2014 à 冠亚法语 : classes de 1 à 3 élèves, niveaux CECR A1-B1, cours classiques et pratique de l'oral</li>
+							<li class='small'>Mars 2014 - juin 2014 à 沈阳体育学院 : 2 classes d'une vingtaine d'élèves chacune, A1-B1, cours d'oral en préparation d'un programme d'échange</li>
+							<li class='small'>Mai 2014 - juillet 2015 à 金矢留学 : classes de 1 à 8 élèves, A1-B1, cours classiques, cours d'oral, préparation d'examens et d'entretiens de visa</li>
+							<li class='small'>Août 2015 - octobre 2016 à 弗朗斯法语 : classes de 1 à 9 élèves, A1-C1, cours classiques, cours d'oral, préparation d'entretiens</li>
 						</ul><br/>
 						<li>Cours particuliers, à domicile et en ligne (via Skype, WeChat, QQ), tous types de cours, de 10 à 65 ans, A1 à C2</li>
 					</ul>
