--- a/templates/zh.html
+++ b/templates/zh.html
@@ -26,10 +26,10 @@
 		</nav>
 		<main>
 			<section id='home' class='on'>
-				<p class='left'><br/>我们是武晓偲（Léa）和 Thibaut Deduit（狄波），2013年起在沈阳工作生活的跨国组合。<br/><br/></p>
+				<p class='left'><br/>我们是武晓偲（Léa）和 Thibaut Deduit（狄波），<br/>2013年起在沈阳工作生活的跨国组合。<br/><br/></p>
 				<img class='xiaosi' src='{{ url_for("static",filename="xiaosi.jpg") }}'>
 				<img class='tibo' src='{{ url_for("static",filename="tibo.jpg") }}'>
-				<p class='right'><br/>我们将以出色的能力和丰富的经验为您提供中法互译和法语课程服务。</p>
+				<p class='right'><br/>我们将以出色的能力和丰富的经验<br/>为您提供中法互译和法语课程服务。</p>
 			</section>
 			<section id='translate'>
 				<p>工作经验：</p>
