--- a/static/zh.css
+++ b/static/zh.css
@@ -4,7 +4,7 @@
 	font-family: 'Microsoft Yahei','微软雅黑',Verdana,Arial,sans-serif;
 }
 #title {
-	font-family: 'minijianyingbik78bba942717567',Arial,sans-serif;
+	font-family: 'minijianyingbik78bba942717567';
 	font-size: 1.2em;
 	letter-spacing: 0.3em;
 }
