--- a/templates/fr.html
+++ b/templates/fr.html
@@ -25,7 +25,7 @@
 		</nav>
 		<main>
 			<section id='home' class='on'>
-				<p class='left'><br/>Bienvenue chez 武晓偲 (Léa) et Thibaut Deduit (狄波),<br/>professeurs et traducteurs à Shenyang depuis fin 2013.<br/><br/></p>
+				<p class='left'><br/>Bienvenue chez Léa Wu et Thibaut Deduit,<br/>professeurs et traducteurs à Shenyang depuis fin 2013.<br/><br/></p>
 				<img class='xiaosi' src='{{ url_for("static",filename="xiaosi.jpg") }}'>
 				<img class='tibo' src='{{ url_for("static",filename="tibo.jpg") }}'>
 				<p class='right'><br/>Nous sommes à votre service<br/>pour vos besoins en traduction et cours de français.</p>
