--- a/templates/zh.html
+++ b/templates/zh.html
@@ -5,7 +5,7 @@
 		<meta name='' content=''>
 		<title>中法互译——在线法语课程</title>
 		<link rel='stylesheet' href='{{ url_for("static",filename="zh.css") }}'>
-		<link href='//cdn.webfont.youziku.com/webfonts/nomal/95591/19493/584b68c7f629d8126c7be394.css' rel='stylesheet' type='text/css'/>
+		<!--<link href='//cdn.webfont.youziku.com/webfonts/nomal/95591/19493/584b68c7f629d8126c7be394.css' rel='stylesheet' type='text/css'/>-->
 		<script src='https://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js'></script>
 		<script src='{{ url_for("static",filename="js.js") }}'></script>
 	</head>
