--- a/static/zh.css
+++ b/static/zh.css
@@ -5,7 +5,7 @@
 	font-size: 1.1em;
 }
 #title {
-	/* font-family: 'minijianyingbik78bba942717567','Microsoft Yahei','微软雅黑'; */
+	font-family: 'minijianyingbik78bba942717567','Microsoft Yahei','微软雅黑';
 	font-size: 1.2em;
 	letter-spacing: 0.3em;
 }
