--- a/static/fr.css
+++ b/static/fr.css
@@ -1,7 +1,7 @@
 @import url('css.css');
 
 * {
-	font-family: 'Tahoma','Arial',sans-serif;
+	font-family: 'Verdana','Arial',sans-serif;
 }
 #title {
 	font-family: 'Palatino','Arial',sans-serif;
