--- a/templates/fr.html
+++ b/templates/fr.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8'>
 		<meta name='' content=''>
 		<title>Traduction Fr-Cn Cn-Fr, cours de français en ligne</title>
-		<link rel='stylesheet' href='{{ url_for("static",filename="fr.css") }}'>
+		<link rel='stylesheet' href='{{ url_for("static",filename="css.css") }}'>
 		<script src='https://lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js'></script>
 		<script src='{{ url_for("static",filename="js.js") }}'></script>
 	</head>
