--- a/static/zh.css
+++ b/static/zh.css
@@ -2,4 +2,11 @@
 
 * {
 	font-family: 'Microsoft Yahei','微软雅黑',Tahoma,sans-serif;
+	font-size: 1.1em;
+}
+#title {
+	letter-spacing: 5px;
+}
+li > li {
+	font-size: 0.9em;
 }
