--- a/static/fr.css
+++ b/static/fr.css
@@ -2,8 +2,11 @@
 
 * {
 	font-family: Tahoma,sans-serif;
-	font-size: 1.1em;
+	font-size: 14px;
+}
+#title {
+	font-size: 24px;
 }
 li > li {
-	font-size: 0.9em;
+	font-size: 12px;
 }
