--- a/static/fr.css
+++ b/static/fr.css
@@ -4,9 +4,9 @@
 	font-family: Tahoma,sans-serif;
 	font-size: 18px;
 }
-#title {
+header {
 	font-size: 36px;
 }
-ul > ul {
+ul > ul > li {
 	font-size: 12px;
 }
