--- a/templates/fr.html
+++ b/templates/fr.html
@@ -65,9 +65,9 @@
 				<p><b>E-mail</b><br/>leasi0510@gmail.com</p>
 			</section>
 		</main>
-		<aside>
+		<footer>
 			<a id='cn' href='{{ url_for("zh") }}'>CN</a>
 			<span id='fr' class='on'>FR</span>
-		</aside>
+		</footer>
 	</body>
 </html>
