--- a/templates/zh.html
+++ b/templates/zh.html
@@ -64,9 +64,9 @@
 				<p><b>邮箱</b><br/>leasi0510@gmail.com</p>
 			</section>
 		</main>
-		<aside>
+		<footer>
 			<span id='zh' class='on'>CN</span>
 			<a id='fr' href='{{ url_for("fr") }}'>FR</a>
-		</aside>
+		</footer>
 	</body>
 </html>
