--- a/static/zh.css
+++ b/static/zh.css
@@ -1,10 +1,11 @@
 @import 'main.css';
 
-nav,section,footer {
+nav > span,section,footer {
 	font-family: 'Microsoft Yahei','微软雅黑',Tahoma,sans-serif;
 	font-size: 16px;
 }
 header {
+	font-family: 'Microsoft Yahei','微软雅黑',Tahoma,sans-serif;
 	letter-spacing: 5px;
 }
 ul > ul > li {
