--- a/static/fr.css
+++ b/static/fr.css
@@ -1,12 +1,13 @@
 @import 'main.css';
 
-nav,main,footer {
+* {
 	font-family: Tahoma,sans-serif;
-	font-size: 16px;
 }
 header {
-	font-family: Tahoma,sans-serif;
-	font-size: 36px;
+	font-family: 'Palatino',sans-serif;
+}
+nav,main,footer {
+	font-size: 16px;
 }
 ul > ul > li {
 	font-size: 14px;
