--- a/templates/fr.html
+++ b/templates/fr.html
@@ -60,9 +60,9 @@
 				<p>Au total, plus de 2500 heures d'enseignement</p>
 			</section>
 			<section id='contact'>
-				<p><b>WeChat</b><br/>Thibaut-Si</p>
-				<p><b>QQ</b><br/>411658819</p>
-				<p><b>E-mail</b><br/>leasi0510@gmail.com</p>
+				<p><b>WeChat</b><br/>Thibaut-Lea<br/><br/></p>
+				<p><b>QQ</b><br/>411658819<br/><br/></p>
+				<p><b>E-mail</b><br/>leasi0510@gmail.com<br/></p>
 			</section>
 		</main>
 		<footer>
