--- a/templates/zh.html
+++ b/templates/zh.html
@@ -59,8 +59,8 @@
 				<p>总计超过2500小时的教学经验</p>
 			</section>
 			<section id='contact'>
-				<p><b>微信</b><br/>Thibaut-Si</p>
-				<p><b>QQ</b><br/>411658819</p>
+				<p><b>微信</b><br/>Thibaut-Lea<br/><br/></p>
+				<p><b>QQ</b><br/>411658819<br/><br/></p>
 				<p><b>邮箱</b><br/>leasi0510@gmail.com</p>
 			</section>
 		</main>
